[package]
name = "yaml-front-matter"
version = "0.0.1"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

edition = "2018"
license = "MIT OR Apache-2.0"
description = "YAML Front Matter (YFM) parser for Markdown files"
readme = "README.md"
repository = "https://github.com/EstebanBorai/yaml-front-matter"
categories = ["parsing", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yaml_front_matter"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
